[Fix] Fixed message date that was wrongly showing UTC time

--- a/src/views/partials/message-card.ejs
+++ b/src/views/partials/message-card.ejs
@@ -14,8 +14,10 @@
 
     <% if (locals.user && locals.user.member) { %>
       <div>
-        <span style="color: #272787">Date:</span> <%= new
-        Date(message.date).toLocaleString() %>
+        <span style="color: #272787">Date:</span> 
+        <%= new Date(message.date).toLocaleString("en-US", {
+          timeZone: "America/New_York"
+        }) %>
       </div>
 
       <div style="margin-bottom: 8px">
